Add Amendments to timeline
* Clean up deleted responses
* Fix casing in

--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
@@ -72,7 +72,7 @@
   >
 </h5>
 
-<section class="no-decisions" *ngIf="!reconsiderations.length">
+<section class="no-decisions" *ngIf="!amendments.length">
   <div>No Amendements</div>
 </section>
 
