New Header + Bug fixes
* Fix favourite to work
* Update header and logo
* Update favourite star icon colour
* Change to outlined icons

--- a/alcs-frontend/src/app/features/board/dialogs/amendment/amendment-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/amendment/amendment-dialog.component.scss
@@ -71,7 +71,7 @@
   width: 18px;
   height: 20px;
   font-size: 18px;
-  color: $favorite-star;
+  color: $secondary-color-dark;
 }
 
 .selected-board-icon {
