--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
@@ -10,3 +10,9 @@
   background-color: $accent-color-dark;
   color: $white;
 }
+
+.avatar-circle.large {
+  font-size: 18px;
+  width: 45px;
+  height: 45px;
+}
