--- a/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
+++ b/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/colors';
 
 button.favorite-btn.gold {
-  color: $favorite-star !important;
+  color: $secondary-color-dark !important;
   visibility: visible;
 }
 
