--- a/alcs-frontend/src/app/shared/header/notifications/notifications.component.html
+++ b/alcs-frontend/src/app/shared/header/notifications/notifications.component.html
@@ -1,9 +1,10 @@
 <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
   <mat-icon
+    class="icon"
     [ngClass]="{
       'unread-notifications': hasUnread
     }"
-    >notifications</mat-icon
+    >notifications_outlined</mat-icon
   >
 </button>
 <mat-menu #notificationMenu="matMenu" xPosition="before">
