--- a/alcs-frontend/src/styles/typography.scss
+++ b/alcs-frontend/src/styles/typography.scss
@@ -15,7 +15,7 @@ $font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
 .material-icons {
-  font-family: Material Icons !important;
+  font-family: Material Icons Outlined !important;
 }
 
 h1 {
