--- a/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.scss
@@ -71,7 +71,7 @@
   width: 18px;
   height: 20px;
   font-size: 18px;
-  color: $favorite-star;
+  color: $secondary-color-dark;
 }
 
 .selected-board-icon {
