--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -1,9 +1,14 @@
 @import '../../../styles/colors';
 
 .header {
-  padding: 0 80px;
+  padding: 8px 80px;
   border-bottom: 1px solid;
-  background-color: whitesmoke;
+  background-color: $primary-color;
+  color: #fff;
+}
+
+.mat-toolbar {
+  background-color: $primary-color;
 }
 
 .mat-toolbar-row, .mat-toolbar-single-row {
@@ -12,6 +17,7 @@
 
 .menu-items-container {
   width: 100%;
+
   .menu-item:hover {
     background: rgb(244, 238, 238);
     border-radius: 8px;
@@ -22,12 +28,14 @@
   border: none;
   background: inherit;
   cursor: pointer;
+  color: #fff;
+  font-size: 20px !important;
 }
 
 button.mat-menu-item {
   width: auto;
   display: inline-block;
-  padding-left: 0px !important;
+  padding-left: 0 !important;
 }
 
 button.mat-menu-item:hover {
@@ -69,6 +77,7 @@ div.board-item {
 
 .board-item:hover {
   background-color: #f8f3f3;
+
   ::ng-deep .favorite-btn {
     visibility: visible;
   }
@@ -85,6 +94,9 @@ div.board-item {
 
   button {
     text-align: left;
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
   }
 
   button:hover {
@@ -92,22 +104,43 @@ div.board-item {
   }
 }
 
-.avatar-menu {
-  padding-right: 0px;
+.notification {
+  margin: 0 16px;
+}
+
+.avatar-menu-button {
+  padding: 0;
   display: flex;
   align-items: center;
+  border: none;
+  background-color: $primary-color;
+  cursor: pointer;
+  color: #fff;
 
   .avatar-menu-arrow {
+    font-size: 18px;
     margin-left: 4px;
     display: inline-block;
     transform: rotate(0deg);
     transition: transform 0.15s linear;
+    line-height: 4px;
   }
 }
 
-.avatar-menu.open {
+.avatar-menu-button.open {
   .avatar-menu-arrow {
     transform: rotate(180deg);
-    transition: transform 0.15s linear;
+  }
+}
+
+.board-menu-arrow {
+  display: inline-block;
+  transform: rotate(0deg);
+  transition: transform 0.15s linear;
+}
+
+.menu-item.open {
+  .board-menu-arrow {
+    transform: rotate(180deg);
   }
 }
