audit subtask on home page

--- a/alcs-frontend/src/app/features/home/home.component.html
+++ b/alcs-frontend/src/app/features/home/home.component.html
@@ -11,4 +11,7 @@
   <div *ngIf="hasCommissioner">
     <app-meeting-overview></app-meeting-overview>
   </div>
+  <div *ngIf="hasApplicationSpecialist">
+    <app-audit-subtasks></app-audit-subtasks>
+  </div>
 </div>
