remove filter on users

--- a/alcs-frontend/src/app/features/home/audit/audit-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/audit/audit-subtasks.component.html
@@ -33,7 +33,7 @@
       <td class="assignee-column" mat-cell *matCellDef="let element">
         <ng-select
           class="subtask-assignee"
-          [items]="auditUsers"
+          [items]="users"
           bindLabel="name"
           bindValue="name"
           [ngModel]="element.assignee?.name"
