--- a/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-  <h2 class="card-title">{{ model.uuid ? 'Update' : 'Create' }} Review Meeting</h2>
+  <h2 class="card-title">{{ model.uuid ? 'Update' : 'Create' }} Scheduled Discussion</h2>
 </div>
 <form (ngSubmit)="onSubmit()" #meetingForm="ngForm">
   <mat-dialog-content style="height: 100%">
