--- a/alcs-frontend/src/app/features/board/dialogs/amendment/amendment-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/amendment/amendment-dialog.component.html
@@ -43,7 +43,7 @@
   </div>
   <div>
     <span class="region"
-      >{{ amendment.application.localGovernment }} - {{ amendment.application.region.label }} Region</span
+      >{{ amendment.application.localGovernment.name }} - {{ amendment.application.region.label }} Region</span
     >
   </div>
   <div class="header-row">
