update subtask type

--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
@@ -9,7 +9,7 @@
           [matTooltipDisabled]="!hasAuditSubtask"
           matTooltipPosition="left"
         >
-          <button mat-menu-item (click)="create('AUDIT')" [disabled]="hasAuditSubtask">Audit</button>
+          <button mat-menu-item (click)="create('AUDT')" [disabled]="hasAuditSubtask">Audit</button>
         </span>
         <button mat-menu-item (click)="create('GIS')">GIS</button>
       </mat-menu>
