--- a/alcs-frontend/src/app/features/application/decision/decision.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.html
@@ -26,7 +26,7 @@
         <mat-icon>delete</mat-icon>
       </button>
     </div>
-    <div class="body-large">Decision #{{ decisions.length - i }}</div>
+    <div class="body-large">Decision {{ decisions.length - i }} - #{{decision.resolutionNumber}}/{{decision.resolutionYear}}</div>
     <div class="decision-content">
       <div>
         <div class="subheading2">Decision Date</div>
