--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
@@ -43,8 +43,17 @@ label {
   color: rgba(0, 0, 0, 0.6);
 }
 
+.resolution-separator {
+  font-size: 20px;
+  margin-top: -10px;
+}
+
 :host::ng-deep {
   .mat-button-toggle-group {
     margin-bottom: 16px;
+  }
+
+  .mat-form-field-appearance-outline .mat-form-field-prefix {
+    top: 0;
   }
 }
